# python-lmdbsystem

./: .gitlab-ci.yml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
cli/: README.md  aaf.sh  afad.sh  dataset_loaders.py  write_csv.py  write_image.py  write_json_baidu.py  write_json_facepp.py  write_json_visage.py  write_text.py  write_text_label_in_filename.py  write_text_label_in_key_in_some_txt.py  write_text_label_in_some_csv.py  write_text_label_in_some_txt.py  write_text_label_in_txt.py  write_txt.py
cli/write_scripts/: aaf.sh  afad.sh  afd.sh  deepglint.sh  fairface.sh  ffhq.sh  rfw.sh  utkface.sh  write_baidu.sh  write_facepp.sh  write_image.sh  write_origin_label.sh  write_visage.sh
cli/write_scripts/vggface2/: vggface2_p1.sh  vggface2_p10.sh  vggface2_p2.sh  vggface2_p3.sh  vggface2_p4.sh  vggface2_p5.sh  vggface2_p6.sh  vggface2_p7.sh  vggface2_p8.sh  vggface2_p9.sh
scripts/: lint.sh
src/lmdbsystem/: dataloader.py  error.py  lmdb.py  utils.py
src/lmdbsystem/read_adapters/: __init__.py  bytes_image.py  cv2_image.py  pil_image.py  text.py
src/lmdbsystem/write_adapters/: __init__.py  csv.py  image.py  json_baidu.py  json_facepp.py  text.py
tests/: test_image.py  test_text.py
tests/resources/: label.txt
